# Q-Trial

./: .gitignore  API_INTEGRATION_GUIDE.md  CHANGELOG.md  CODE_REVIEW.md  FEATURE_SELECTION_HANDOFF.md  FEATURE_SELECTION_IMPLEMENTATION.md  FEATURE_SELECTION_SUMMARY.md  FIXES_APPLIED.md  README.md  SUMMARY_OF_FIXES.md  qubo_feature_selection (2).md  qubo_feature_selection.md
backend/: .env.example  .gitignore  README.md  VERIFICATION_REPORT.py  benchmark_all_methods.py  comprehensive_benchmark_with_verification.py  debug_qubo.py  final_benchmark_report.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  setup.py  test_feature_selection.py  test_feature_selection_simple.py  test_greedy.py  test_qubo.py  test_report_json.py  validate_4b.py  validate_5.py  validate_5_diag.py  validate_5_synthetic.py  validate_6.py  validate_8_1_relevance.py  validate_8_2_redundancy.py  validate_8_3_qubo_properties.py  validate_8_4_analysis.py  validate_8_4_extended.py  validate_8_4_redundancy_reduction.py  validate_8_5_agent_input.py  validate_8_6_report_section.py  validate_8_7_regression.py  validate_8_8_performance.py  verify_fixes.py
backend/data/: metadata_template.json
backend/tests/: test_api_analyst_report.py  test_clinical_stats_findings.py  test_cst_translator.py  test_feature_selection_protection.py  test_finding_categories.py  test_finding_comparison_normalizer.py  test_finding_verbalizer.py  test_integration.py  test_literature_validator.py  test_orchestrator_findings.py  test_properties.py  test_qubo_feature_selection.py  test_report_comparison.py  (+3 more)
(+251 files in other folders)
