[tool.poetry]
name = "qtrial-backend"
version = "0.1.0"
description = "Clinical trial dataset insight agent (Python backend)"
authors = ["Mohamad M Bailoun <mmb84@mail.aub.edu>"]
readme = "README.md"
packages = [{ include = "qtrial_backend", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

pandas = ">=3.0.1,<4.0.0"
openpyxl = ">=3.1.5,<4.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
typer = ">=0.24.0,<0.25.0"
rich = ">=14.3.2,<15.0.0"
pydantic = ">=2.12.5,<3.0.0"
scipy = ">=1.14.0,<2.0.0"
lifelines = ">=0.30.0,<0.31.0"
statsmodels = ">=0.14.0,<1.0.0"

openai = ">=2.21.0,<3.0.0"
anthropic = ">=0.81.0,<0.82.0"
google-genai = ">=1.63.0,<2.0.0"
httpx = ">=0.28.0,<0.29.0"

[tool.poetry.scripts]
qtrial = "qtrial_backend.main:app"

[build-system]
requires = ["poetry-core>=2.3.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

